--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
+    "karma-junit-reporter": "^0.2.2",
+    "express": "4.x",
+    "consolidate": "latest"
   },
   "scripts": {
     "postinstall": "bower install",
